Prevent wrapping in action-links.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,9 @@ table.bookings {
     height: 3em;
   }
 }
+
+th, td {
+  &.action-links {
+    white-space: nowrap;
+  }
+}
